BUG (tracker): fix small flickering when mousing over the reset stats button

--- a/core/src/css/component/decktracker/main/deck-winrate-matrix.component.scss
+++ b/core/src/css/component/decktracker/main/deck-winrate-matrix.component.scss
@@ -132,7 +132,7 @@ deck-matchup-info {
 
 			&:hover {
 				background: #ffb948;
-				border: none;
+				border: 1px solid #ffb948;
 
 				span {
 					color: #2f0d0d;
